--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,29 +13,21 @@ repos:
     - id: check-added-large-files
     - id: check-merge-conflict
     - id: detect-private-key
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.4.0
-    hooks:
-    - id: pyupgrade
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-    - id: isort
-      args: ["--profile", "black"]
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
-    hooks:
-    - id: black
-  - repo: https://github.com/PyCQA/bandit
+  - repo: https://github.com/PyCQA/bandit  # still not complete in ruff
     rev: 1.7.5
     hooks:
     - id: bandit
       args: ["-c", "pyproject.toml"]
       additional_dependencies: ["bandit[toml]"]
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.0.270
     hooks:
-    - id: flake8
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+  - repo: https://github.com/psf/black
+    rev: 23.3.0
+    hooks:
+    - id: black
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.2.0
     hooks:
