test: config in pyproject.toml instead of Makefile
pyproject.toml is a modern standard config file that allows flexible
configuration. There is no need for a separate `make` target. This also
reduces dependence on `make`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,10 @@ distribution = [
   "twine==4.0.2",
 ]
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "--cov=fio_banka --cov-report term-missing"
+
 [tool.ruff]
 line-length = 100
 # https://beta.ruff.rs/docs/rules/
