--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-    # - id: no-commit-to-branch  # protects 'main' by default
+    - id: no-commit-to-branch  # protects 'main' by default
     - id: check-yaml
     - id: check-toml
     - id: check-json
