--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           pip install wheel
-          pip install .[development]
+          pip install .[devel]
       - name: Test with pytest
         run: |
           pytest
