--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ select = [
   "N",    # pep8-naming
   "UP",   # pyupgrade
   "YTT",  # flake8-2020
+  "S",    # flake8-bandit
   "BLE",  # flake8-blind-except
   "FBT",  # flake8-boolean-trap
   "B",    # flake8-bugbear
@@ -80,5 +81,7 @@ ignore = ["TRY003"]
 # These may break temporarily commented-out code
 unfixable = ["F401", "F841"]
 
-[tool.bandit.assert_used]
-skips = ["*/test_*.py"]
+[tool.ruff.per-file-ignores]
+"tests/*" = [
+  "S101",
+]
