--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,4 +26,5 @@ repos:
     rev: v1.4.1
     hooks:
       - id: mypy
-        additional_dependencies: [types-requests==2.31.0.0]
+        # manually sync with deps in pyproject.toml
+        additional_dependencies: ["types-requests>=2.31.0.0,<3"]
