--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ select = [
   "C90", # mccabe
   "I",   # isort
   "N",   # pep8-naming
+  "D",   # pydocstyle
   "UP",  # pyupgrade
   "YTT", # flake8-2020
   "S",   # flake8-bandit
@@ -77,8 +78,14 @@ select = [
   "RUF", # Ruff-specific rules
 ]
 ignore = ["TRY003"]
-# These may break temporarily commented-out code
-unfixable = ["F401", "F841"]
+unfixable = [
+  # These may break temporarily commented-out code
+  "F401",
+  "F841",
+]
 
 [tool.ruff.per-file-ignores]
-"tests/*" = ["S"]
+"tests/*" = ["D", "S"]
+
+[tool.ruff.pydocstyle]
+convention = "google"
