--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,4 +27,4 @@ repos:
     hooks:
       - id: mypy
         # manually sync with deps in pyproject.toml
-        additional_dependencies: ["types-requests>=2.31.0.0,<3"]
+        additional_dependencies: ["types-requests~=2.31"]
