--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
   "Topic :: Office/Business :: Financial",
 ]
 dependencies = [
-  "requests>=2.31.0,<3.0", # manually sync with mypy deps in .pre-commit-config.yaml
+  "requests~=2.31", # manually sync with mypy deps in .pre-commit-config.yaml
 ]
 
 [project.urls]
@@ -29,10 +29,10 @@ Homepage = "https://github.com/peberanek/fio-banka"
 
 [project.optional-dependencies]
 devel = [
-  "pre-commit>=3.3.1,<4.0",
-  "pytest>=7.3.1,<8.0",
-  "pytest-cov>=4.1.0,<5.0",
-  "types-requests>=2.31.0.0,<3",
+  "pre-commit~=3.3",
+  "pytest~=7.3",
+  "pytest-cov~=4.1",
+  "types-requests~=2.31",
 ]
 
 [tool.pytest.ini_options]
