ci: test package build early
This should catch issues sooner.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,9 +12,11 @@ jobs:
           python-version: '3.11'
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pipenv
+          python3 -m pip install --upgrade pipenv build
           # Not using `--deploy` here. Updates should be handled by a bot.
           pipenv install --dev
+      - name: Build package
+        # The `build` pkg is not installed in the virtualenv.
+        run: python3 -m build
       - name: Run tests
-        run: |
-          pipenv run pytest
+        run: pipenv run pytest
