fix: fix package build
Due to invalid config of pyproject.toml with pipenv the package did not
install dependencies. This is now fixed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ classifiers = [
   "Topic :: Communications",
   "Topic :: Office/Business :: Financial",
 ]
+# Make sure deps (e.g. for Mypy) in Pipfile and .pre-commit-config.yaml are
+# in sync.
+dependencies = ["requests~=2.31"]
 
 [project.urls]
 Homepage = "https://github.com/peberanek/fio-banka"
