--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-# Make sure Mypy deps in .pre-commit-config.yaml are in sync.
-requests = "~=2.31"
 
 [dev-packages]
-fio-banka = {editable = true, path = "."}
 pre-commit = "~=3.3"
 pytest = "~=7.3"
 pytest-cov = "~=4.1"
 types-requests = "~=2.31"
+fio-banka = {file = ".", editable = true}
 
 [requires]
 python_version = "3.11"
