--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,9 @@ name = "pypi"
 pre-commit = "~=3.3"
 pytest = "~=8.0"
 pytest-cov = "~=4.1"
+requests-mock = "~=1.11"
 types-requests = "~=2.31"
 fio-banka = {file = ".", editable = true}
 
 [requires]
-python_version = "3.11"
+python_version = "3.12"
