--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 # https://pre-commit.com
 # https://pre-commit.com/hooks.html
+default_install_hook_types: [pre-commit, pre-push]
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
@@ -24,3 +25,11 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: ["types-requests~=2.31"]
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        language: system
+        pass_filenames: false
+        entry: pipenv run pytest
+        stages: [pre-push]
