chore(deps): upgrade to Python 3.12

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
   "Intended Audience :: Developers",
   "Intended Audience :: Financial and Insurance Industry",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "License :: OSI Approved :: MIT License",
   "Topic :: Communications",
   "Topic :: Office/Business :: Financial",
